@@ -1,2 +1,6 @@
 [Platforms]
 WindowsArguments = dpiawareness=0
+
+[Paths]
+Plugins = .
+
