@@ -14,6 +14,7 @@ BeeBEEP 5.8.3 (in development)
 - Fixed a bug on Download folder when you copy BeeBEEP from a computer to another one
 - Suspend/sleep mode is now managed also in Linux systems.
 - Added "AllowOnlyHostAddressesFromHostsIni" option in file beebeep.rc
+- Fixed security issue with command line argument -platformpluginpath
 
 BeeBEEP 5.8.2
 - New feature: voice messages (you can record your message and send it as file)
